<resources>
    <string name="app_name">CSE110-Project</string>
    <string name="enter_previous_courses">Enter Previous Courses</string>
    <string name="subject">Subject</string>
    <string name="course_number">Course Number</string>
    <string name="done">Done</string>
    <string name="enter">Enter</string>
    <string name="list_of_inputted_courses">List of Inputted Courses</string>
    <string name="year">Year</string>
    <string name="quarter">Quarter</string>
    <string name="back">Back</string>
    <string name="start">Start</string>
    <string name="mock_nearby_messages">Mock Nearby Messages</string>
    <string name="start_app">Start App</string>
    <string name="enter_first_name_below">Enter First Name Below</string>
    <string name="first_name">First name...</string>
    <string name="confirm">Confirm</string>
    <string name="note_please_click_enter_to_save_the_entered_class">Note: Please click Enter to save the entered class.</string>
    <string name="class_size">Class Size</string>
    <string name="enter_api_information_in_this_format_name_link_year1_quarter1_classsize1_course1_number1_year2_quarter2_classsize2_course2_number2">Enter API information in this format: Name,Link,Year1,Quarter1,ClassSize1,Course1,Number1,Year2,Quarter2,ClassSize2,Course2,Number2...</string>
    <string name="populate_default_database">POPULATE DEFAULT DATABASE</string>
    <string name="developer_settings">DEVELOPER SETTINGS</string>
    <string name="saved_sessions">SAVED SESSIONS</string>
    <string name="students_found_during_session">Students Found During Session</string>
    <string name="delete_all_sessions">DELETE ALL SESSIONS</string>
    <string name="reset_data">RESET DATA</string>
    <string name="change_session_name">CHANGE SESSION NAME</string>

    <string-array name="academic_years">
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
    </string-array>

    <string-array name="academic_quarters">
        <item>Fall</item>
        <item>Winter</item>
        <item>Spring</item>
        <item>Summer Session I</item>
        <item>Summer Session II</item>
        <item>Special Summer Session</item>
    </string-array>

    <string-array name="class_size">
        <item>Tiny (1-40)</item>
        <item>Small (40-75)</item>
        <item>Medium (75-150)</item>
        <item>Large (150-250)</item>
        <item>Huge (250-400)</item>
        <item>Gigantic (400+)</item>
    </string-array>

    <string-array name="sorting_options">
        <item>Default</item>
        <item>Prioritize Recent</item>
        <item>Prioritize Small Classes</item>
    </string-array>
</resources>